Fixed OXUIB-884 Onboarding Wizard not correctly displayed on small iOS Displays
root cause: flex shrink was behaving strangely for small devices
solution: remove shrink for some components

(cherry picked from commit 2e969d7ce33d3c5ac2c84ebf09ec165663fe721f)

--- a/ui/apps/io.ox/onboarding/style.less
+++ b/ui/apps/io.ox/onboarding/style.less
@@ -159,7 +159,7 @@
             .content-container {
                 display: flex;
                 flex-direction: column;
-                flex: 1 1 auto;
+                flex: 1 0 auto;
                 //justify-content: center;
 
                 .description {
@@ -257,6 +257,7 @@
                 //DownloadView
                 .download {
                     align-self: center;
+                    flex: 0 0 auto;
                     font-size: 18px;
                     margin: 10% 0 10% 0;
                     padding: 16px;
